2014-02-28  Mathias Brodala  <mbrodala@pagemachine.de>

	* Implement #56269: Backport TSFE getHash hook to TYPO3 4.5

2013-11-22  Christian Weiske  <christian.weiske@netresearch.de>

	* Fix bug in contexts that caused DAM not to show any usage references
	* Fix a broken unit test
	* Remove manual.sxw; it is not needed by TER anymore
	* Set minimum TYPO3 version to 4.6.0
	* Version 0.3.1

2013-08-16  Christian Weiske  <christian.weiske@netresearch.de>

	* Support "extend to subpages" in 4.7, 6.0, 6.1 and 6.2
	* Fix fatal error in TYPO3 6.2
	* Version 0.3.0

2013-06-03  Christian Weiske  <christian.weiske@netresearch.de>

	* First public version with Domain, GetParam, IP, Combination support
	* Version 0.2.0

2013-01-30  Christian Opitz  <christian.opitz@netresearch.de>

	* Initial code generated with kickstarter