@@ -1,3 +1,8 @@
+2014-02-28  Christian Weiske  <christian.weiske@netresearch.de>
+
+	* Fix bug: GET parameters get appended to all URLs even when
+	           they are stored in session
+
 2014-02-28  Mathias Brodala  <mbrodala@pagemachine.de>
 
 	* Implement #56269: Backport TSFE getHash hook to TYPO3 4.5
